--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -197,7 +197,7 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
-                  <div class="form-group local_committee" (click)="selectInput('local_committee')">
+                  <div class="form-group local_committee" (tap)="selectInput('local_committee')">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -217,7 +217,7 @@
                       Selecione a AIESEC mais próxima.
                     </div>
                   </div>
-                  <div class="form-group scholarity" (click)="selectInput('scholarity')">
+                  <div class="form-group scholarity" (tap)="selectInput('scholarity')">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -237,7 +237,7 @@
                     </div>
                   </div>
                   <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6" class="animated fadeIn faster">
-                    <div class="form-group  university" (click)="selectInput('university')">
+                    <div class="form-group  university" (tab)="selectInput('university')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
@@ -257,7 +257,7 @@
                         Selecione uma universidade.
                       </div>
                     </div>
-                    <div class="form-group college_course"  (click)="selectInput('college_course')">
+                    <div class="form-group college_course"  (tab)="selectInput('college_course')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
