--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -237,7 +237,7 @@
                     </div>
                   </div>
                   <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6" class="animated fadeIn faster">
-                    <div class="form-group  university" (tab)="selectInput('university')">
+                    <div class="form-group  university" (tap)="selectInput('university')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
@@ -257,7 +257,7 @@
                         Selecione uma universidade.
                       </div>
                     </div>
-                    <div class="form-group college_course"  (tab)="selectInput('college_course')">
+                    <div class="form-group college_course"  (tap)="selectInput('college_course')">
                       <div class="input-group select-dropdown">
                         <div class="input-group-prepend">
                           <div class="input-group-text">
