--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -200,7 +200,7 @@
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
 
-                <div class="form-group local_committee" (tap)="selectInput('local_committee')">
+                <div class="form-group local_committee">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -209,7 +209,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
-                          #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick();"
+                          #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();"
                           dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado"
                           placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
@@ -221,7 +221,7 @@
                   </div>
                 </div>
 
-                <div class="form-group scholarity" (tap)="selectInput('scholarity')">
+                <div class="form-group scholarity">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -230,7 +230,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
-                          #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
+                          #scholarityAutocomplete (onFocus)="selectInput('scholarity');scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
                           field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"  *ngIf="user.scholarity"></i>
                       </div>
@@ -241,7 +241,7 @@
                   </div>
                 </div>
                 <div *ngIf="+user.scholarity.id >= 2 && +user.scholarity.id != 6" class="animated fadeIn faster">
-                  <div class="form-group university" (tap)="selectInput('university')">
+                  <div class="form-group university">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -250,7 +250,7 @@
                       <div class="dropdown">
                         <div class="styled-select">
                           <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)"
-                            #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick()"
+                            #universityAutocomplete (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick()"
                             dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado"
                             placeholder="Onde você estuda?"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"  *ngIf="user.university"></i>
@@ -261,7 +261,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group college_course" (tap)="selectInput('college_course')">
+                  <div class="form-group college_course">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -270,7 +270,7 @@
                       <div class="dropdown">
                         <div class="styled-select">
                           <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
-                            #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick()"
+                            #coursesAutocomplete (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick()"
                             dropdownMode="current" field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado"
                             placeholder="Insira seu curso"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')"  *ngIf="user.college_course"></i>
@@ -282,7 +282,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="form-group english_level" (tap)="selectInput('english_level')">
+                <div class="form-group english_level">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -291,7 +291,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
-                          #englishAutocomplete (onFocus)="englishAutocomplete.handleDropdownClick();"
+                          #englishAutocomplete (onFocus)="selectInput('english_level');englishAutocomplete.handleDropdownClick();"
                           dropdownMode="current" field="name" formControlName="english_level" emptyMessage="Nenhum resultado"
                           placeholder="Isso nos ajuda a te direcionar para as vagas mais adequadas"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('english_level')" *ngIf="user.english_level"></i>
@@ -302,7 +302,7 @@
                     Selecione um nível de inglês.
                   </div>
                 </div>
-                <div class="form-group spanish_level" (tap)="selectInput('spanish_level')">
+                <div class="form-group spanish_level">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -311,7 +311,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.spanish_level" [suggestions]="filteredSpanishLevelOptions" (completeMethod)="searchSpanishLevels($event)"
-                          #spanishAutocomplete (onFocus)="spanishAutocomplete.handleDropdownClick();"
+                          #spanishAutocomplete (onFocus)="selectInput('spanish_level');spanishAutocomplete.handleDropdownClick();"
                           dropdownMode="current" field="name" formControlName="spanish_level" emptyMessage="Nenhum resultado"
                           placeholder="Isso nos ajuda a te direcionar para as vagas mais adequadas"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('spanish_level')" *ngIf="user.spanish_level"></i>
