--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -199,7 +199,7 @@
 
             <div class="animated fadeIn" *ngIf="studyData && !completedSignup">
               <form [formGroup]="step2Form" class="forms">
-                <div class="form-group local_committee" (tap)="selectInput('local_committee')">
+                <div class="form-group local_committee">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -208,7 +208,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
-                          #placesAutocomplete (onFocus)="placesAutocomplete.handleDropdownClick();" dropdownMode="current"
+                          #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
                           field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                       </div>
@@ -218,7 +218,7 @@
                     Selecione a AIESEC mais próxima.
                   </div>
                 </div>
-                <div class="form-group scholarity" (tap)="selectInput('scholarity')">
+                <div class="form-group scholarity">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -227,7 +227,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.scholarity" (ngModelChange)="changeScholarity(user.scholarity.id)" [suggestions]="filteredScholarityOptions" (completeMethod)="searchScholarity($event)"
-                          #scholarityAutocomplete (onFocus)="scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
+                          #scholarityAutocomplete (onFocus)="selectInput('scholarity');scholarityAutocomplete.handleDropdownClick()" dropdownMode="current"
                           field="name" formControlName="scholarity" emptyMessage="Nenhum resultado" placeholder="Qual seu nível de escolaridade?"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('scholarity')"  *ngIf="user.scholarity"></i>
                       </div>
@@ -238,7 +238,7 @@
                   </div>
                 </div>
                 <div *ngIf="user.scholarity.id>= 2 && user.scholarity.id != 6" class="animated fadeIn faster">
-                  <div class="form-group university" (tap)="selectInput('university')">
+                  <div class="form-group university">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -247,7 +247,7 @@
                       <div class="dropdown">
                         <div class="styled-select">
                           <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)"
-                            #universityAutocomplete (onFocus)="universityAutocomplete.handleDropdownClick();" dropdownMode="current"
+                            #universityAutocomplete (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="university_id" emptyMessage="Nenhum resultado" placeholder="Onde você estuda?"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"  *ngIf="user.university"></i>
                         </div>
@@ -257,7 +257,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group college_course" (tap)="selectInput('college_course')">
+                  <div class="form-group college_course">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -266,7 +266,7 @@
                       <div class="dropdown">
                         <div class="styled-select">
                           <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
-                            #coursesAutocomplete (onFocus)="coursesAutocomplete.handleDropdownClick();" dropdownMode="current"
+                            #coursesAutocomplete (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado" placeholder="Insira seu curso"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')"  *ngIf="user.college_course"></i>
                         </div>
@@ -277,7 +277,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="form-group  english_level" (tap)="selectInput('english_level')">
+                <div class="form-group  english_level">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
                       <div class="input-group-text">
@@ -286,7 +286,7 @@
                     <div class="dropdown">
                       <div class="styled-select">
                         <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
-                          #englishAutocomplete (onFocus)="englishAutocomplete.handleDropdownClick();" dropdownMode="current"
+                          #englishAutocomplete (onFocus)="selectInput('english_level');englishAutocomplete.handleDropdownClick();" dropdownMode="current"
                           field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="Isso nos ajuda a te direcionar para as vagas mais adequadas"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('english_level')"  *ngIf="user.english_level"></i>
                       </div>
