feat(forms*): now universities autocomplete uses a ajax request to retrieve its data

--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -249,7 +249,7 @@
                       </div>
                       <div class="dropdown">
                         <div class="styled-select">
-                          <p-autoComplete [(ngModel)]="user.university" [suggestions]="filteredUniversities" (completeMethod)="searchUnivesity($event)"
+                          <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities" (completeMethod)="searchUnivesity($event)"
                             #universityAutocomplete (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick()"
                             dropdownMode="current" field="name" formControlName="university_id" emptyMessage="Nenhum resultado"
                             placeholder="Onde você estuda?"></p-autoComplete>
