feat(forms): highlight color

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1503,9 +1503,9 @@ label {
     width: 100%;
     padding:9.5px;
     transition:.3s;
-    &:hover {
-      background-color: #3f77bc;
-      color:#fff;
+    &.ui-state-highlight{
+        background-color: #3f77bc;
+        color:#fff;
     }
   }
 }
