fix(menu/LP): header li/ul fixed, landing page overflow-x fixed

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -15,7 +15,7 @@
           <ul id="menu">
             <li>
               Faça um intercâmbio
-              <ul class="animated fadeIn faster">
+              <ul class="animated fadeIn faster ul-products">
                 <li routerLink="/voluntario-global">
                   Voluntário Global
                 </li>
@@ -34,7 +34,7 @@
             </li>
             <li>
               Seja nosso Parceiro
-              <ul class="animated fadeIn faster">
+              <ul class="animated fadeIn faster ul-parterns">
                 <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
                   <li>
                     ONG
@@ -54,7 +54,7 @@
             </a>
             <li>
               Blog
-              <ul class="animated fadeIn faster">
+              <ul class="animated fadeIn faster ul-blog">
                 <a href="http://business.aiesec.org.br/">
                   <li>
                     Business
@@ -69,7 +69,7 @@
             </li>
             <li>
               Planeje sua viagem
-              <ul class="animated fadeIn faster">
+              <ul class="animated fadeIn faster ul-trip">
                 <a href="http://blog.aiesec.org.br/cipassagensaereas/">
                   <li>
                     Passagens Aéreas
@@ -93,7 +93,7 @@
             <div class="logo-menu" routerLink="/"></div>
             <li>
               <span>Faça um intercâmbio</span>
-              <ul class="animated fadeIn faster">
+              <ul class="animated fadeIn faster" >
                 <li routerLink="/voluntario-global" [ngx-scroll-to]="'#header-product'">
                   Voluntário Global
                 </li>
