fix(landing page menu): class name fixed

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -34,7 +34,7 @@
             </li>
             <li>
               Seja nosso Parceiro
-              <ul class="animated fadeIn faster ul-parterns">
+              <ul class="animated fadeIn faster ul-partners">
                 <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
                   <li>
                     ONG
@@ -69,7 +69,7 @@
             </li>
             <li>
               Planeje sua viagem
-              <ul class="animated fadeIn faster ul-trip">
+              <ul class="animated fadeIn faster ul-travel">
                 <a href="http://blog.aiesec.org.br/cipassagensaereas/">
                   <li>
                     Passagens Aéreas
@@ -93,7 +93,7 @@
             <div class="logo-menu" routerLink="/"></div>
             <li>
               <span>Faça um intercâmbio</span>
-              <ul class="animated fadeIn faster" >
+              <ul class="animated fadeIn faster">
                 <li routerLink="/voluntario-global" [ngx-scroll-to]="'#header-product'">
                   Voluntário Global
                 </li>
