--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -175,7 +175,7 @@ ul#menu {
                         &.ul-products {
                             bottom: -85px;
                         }
-                        &.ul-parterns, &.ul-blog, &.ul-trip {
+                        &.ul-partners, &.ul-blog, &.ul-travel {
                             bottom: -35px;
                         }
                         a:hover {
