--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -1538,3 +1538,11 @@ label {
         }
     }
 }
+
+.full-screen-embedded {
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
