fix(forms *): fix buttons layout

--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -972,6 +972,20 @@ label {
         flex-direction: column;
         padding: 20px 10px 10px 15px;
     }
+    #row-with-buttons {
+        flex-direction: column-reverse;
+        > div {
+            display:flex;
+            width: 100%;
+            align-content: center;
+            justify-content: center;
+            margin: 5px 0;
+            min-height: 40px;
+            button {
+                width: 100%;
+            }
+        }
+    }
 }
 
 /*--------------------------------------------------------------
