--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -368,7 +368,7 @@
               </div>
             </section>
 
-            <div class="form-row buttons" *ngIf="!completedSignup">
+            <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col text-left">
                 <button type="button" class="btn btn-secondary" data-toggle="modal" (click)="cancelSignUp()" data-target="#modalCancelar1"
                   [ngx-scroll-to]="'#header-talentos-globais'">{{formedUser || submittedPersonal ? 'Voltar' : 'Cancelar'}}</button>
