--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -975,6 +975,20 @@ label {
         font-size: 25px;
         margin-top: 10px;
     }
+    #row-with-buttons {
+        flex-direction: column-reverse;
+        > div {
+            display:flex;
+            width: 100%;
+            align-content: center;
+            justify-content: center;
+            margin: 5px 0;
+            min-height: 40px;
+            button {
+                width: 100%;
+            }
+        }
+    }
 }
 
 /*--------------------------------------------------------------
@@ -1734,3 +1748,4 @@ label {
     align-items: center;
     justify-content: center;
 }
+
