--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -63,6 +63,9 @@
             justify-content: center;
         }
     }
+    i.autocomplete-clear-btn {
+        top: 0;
+    }
 }
 
 .loading-animation-ge {
@@ -640,6 +643,9 @@ input[type=tel] {
 
 .forms-term {
     margin-top: 30px;
+    .col-sm-10 {
+        z-index: 0;
+    }
     .iframe {
         min-height: 150px;
         body {
@@ -1130,6 +1136,9 @@ label {
 @media (max-width: 600px) {
     #inputDatadeNascimento{
         text-align: left;
+    }
+    p-autoComplete {
+        font-size: 3.2vw !important
     }
     //prime 
     ::ng-deep .p-inputMask input {
