--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -74,6 +74,9 @@
             justify-content: center;
         }
     }
+    i.autocomplete-clear-btn {
+        top: 0;
+    }
 }
 
 // form A/B - end
@@ -649,6 +652,9 @@ input[type=tel] {
 
 .forms-term {
     margin-top: 30px;
+    .col-sm-10 {
+        z-index: 0;
+    }
     .iframe {
         min-height: 150px;
         body {
@@ -1135,6 +1141,9 @@ label {
     #inputDatadeNascimento {
         text-align: left;
     } //prime 
+    p-autoComplete {
+        font-size: 3.2vw !important
+    }
     ::ng-deep .p-inputMask input {
         text-align: left;
         padding: 0px 0 0 0;
