--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1752,7 +1752,7 @@ label {
     overflow: auto;
     li {
         width: 100%;
-        padding: 9.5px;
+        padding: 4.5px;
         transition: .3s;
         cursor: pointer;
         &.ui-state-highlight {
@@ -1792,7 +1792,6 @@ label {
 }
 
 .info-mobile-content {
-    padding-left: 20px;
     text-align: left;
     font-size: 13px;
 }
@@ -1806,6 +1805,7 @@ label {
     left:0;
     top:0;
     position:fixed;
+    z-index: 1001;
     .modal-bg {
         width: 100%;
         height: 100%;
@@ -1826,7 +1826,12 @@ label {
         right: 0;
         border-radius: 50%;
         font-size: 30px;
-        z-index: 20;
-        color: #fff;
+        z-index: 1003;
+        color: #3f77bc;
     }
+}
+label.input-terms-label {
+    text-align: center;
+    width: 100%;
+    font-size: 22px;
 }
