--- a/src/app/terms/terms.component.scss
+++ b/src/app/terms/terms.component.scss
@@ -1,9 +1,9 @@
 .modal-wrapper {
-    width: 85%;
-    height: 85%;
+    width: 100%;
+    height: 100%;
     position: relative;
-    left: 7.5%;
-    margin-top: 15%;
+    left: 0%;
+    margin-top: 0%;
     z-index: 10;
     overflow-y: auto;
     overflow-x: hidden;
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     color: #333;
     background-color: #fff;
-    border-radius: 10px;
+    z-index: 1000;
 }
 
 h1 {
