--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -284,7 +284,7 @@
                   <div class="col-sm-10">
                     <div class="form-group">
                       <div class="desktop" style='flex-direction: column'>
-                          <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
+                        <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
                         <iframe height="200px" width="100%" scrolling="yes" class='form-control iframe' id="inputTermos" src="../assets/terms/terms.html"></iframe>
                         <label class="form-group forms-tem-accepted">
                           Ao se cadastrar você concorda com os nossos Termos e Condições descritos acima.
@@ -298,6 +298,10 @@
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="form-group form-check text-center checkbox">
+                  <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable" formControlName="cellphone_contactable" name="cellphone_contactable">
+                  <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
                 </div>
               </form>
             </div>
